WIP data model on backend

--- a/backend/pages/index.html
+++ b/backend/pages/index.html
@@ -7,8 +7,10 @@
     </head>
     <body>
         <code>
+            Token: <input type="text" id="token" value="tokennnnnn" ></input><br>
             Hello, wurld.<br>
-            <button onclick="getTime();" >What time is it?</button><br>
+            <input type="text" id="input" value="dataaaa" ></input>
+            <button onclick="sendData();" >Send!</button><br>
             <span id="time_disp" ></span>
         </code>
         <script src="/socket.io/socket.io.js"></script>
